# cc-agent-teams-action-monitor

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.en.md  README.md  README.zh.md  mcp_example.json  package-lock.json  skills-lock.json  start-claude-bigmodel.sh.example
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  agents.py  messages.py  tasks.py  teams.py  timeline.py  websocket.py
backend/app/middleware/: __init__.py  language.py
backend/app/models/: __init__.py  agent.py  chat.py  message.py  model.py  network.py  task.py  team.py  timeline.py
backend/app/services/: __init__.py  agent_status_service.py  cache_service.py  file_watcher.py  i18n_service.py  message_parser.py  timeline_service.py
backend/app/utils/: __init__.py
backend/locales/en/: api.json  logs.json
backend/locales/ja/: api.json  logs.json
backend/locales/zh/: api.json  logs.json
backend/tests/: conftest.py  test_agents.py  test_api_i18n.py  test_api_tasks.py  test_api_teams.py  test_chat_messages.py  test_file_watcher.py  test_i18n_service.py  test_language_middleware.py  test_messages.py  test_network_api.py  test_websocket.py
backend/tests/api/routes/: test_timeline.py
backend/tests/services/: test_agent_status_service.py  test_message_parser.py  test_timeline_service.py
blog/: building-claude-code-agent-teams-skills-and-monitoring-dashboard.md
docs/: feature-specification.md  uat-test-cases.md  user-guide.md
frontend/: e2e-test-agent-task.mjs  e2e_test.js  (+9 more)
(+224 files in other folders)
